# fog-schemars

./: Cargo.toml  README.md
fog-schemars/: Cargo.toml
fog-schemars-derive/: Cargo.toml
fog-schemars-derive/src/: lib.rs  validator_exprs.rs
fog-schemars-derive/src/attr/: mod.rs  schemars_to_serde.rs  validation.rs
fog-schemars/src/: gen.rs  lib.rs
fog-schemars/src/schema_impls/: array.rs  bytes.rs  core.rs  fog_pack_impls.rs  ipaddr.rs  maps.rs  mod.rs  nonzero.rs  primitives.rs  sequences.rs  serde_bytes.rs  time.rs  tuple.rs  uuid.rs  wrapper.rs
