[package]
name = "fog-schemars"
version = "0.1.0"
edition = "2021"
authors = ["Scott Teal"]
repository = "https://github.com/Cognoscan/fog-schemars"
homepage = "https://github.com/Cognoscan/fog-schemars"
license = "MIT OR Apache-2.0"
description = "Derive fog-pack Validators and Schemas from Rust code"
readme = "README.md"
keywords = ["rust", "fog-pack", "fog-schema", "serde"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fog-pack = "0.4"
#fog-schemars-derive = { version = "=0.1.0", optional = true, path = "../fog-schemars-derive" }
serde = { version = "1.0", features = ["derive"] }

uuid = { version = "1.0", default-features = false, optional = true }

smallvec = { version = "1", optional = true }
bytes = { version = "1", optional = true }
serde_bytes = { version = "0.11", optional = true }

smol_str = { version = "0.2", optional = true }
smallstr = { version = "0.3", optional = true }
smartstring = { version = "1", optional = true }


[features]
#default = ["derive"]

#derive = ["fog-schemars-derive"]
